Fixed overlapping problem

--- a/iposcore/public/css/content.css
+++ b/iposcore/public/css/content.css
@@ -1,3 +1,4 @@
 .content{
-    left: 250px;
+    margin-left: 250px;
+    overflow: auto;
 }
